--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+    <main>
       <div class="heading">
        <h1>Richter</h1>
         </div>
@@ -66,6 +67,7 @@
         window.scrollRight = scrollRight;
   });
     </script>
+    </main>
         <footer>
             <h9>&copy;Copyright 2020</h9><br><br>
             <h9>All Rights are Reserved</h9><br><br>
