--- a/Login Form.html
+++ b/Login Form.html
@@ -10,9 +10,14 @@
         <form>
             <label for="Email ID">Email ID</label><input class ="fields" type="email" placeholder="Enter your Email"required ><br>
             <label for="Password">Password</label><input class ="fields" type="password" placeholder="Enter your Password"required ><br>
-            <button class ="button">Log In</button>
+            <button class ="button" onclick="refer()">Log In</button>
         </form>
             </div>
         </div>
+        <script>
+        function refer() {
+            window.location.href = 'index.html';
+        }
+        </script>
     </body>
 </html>
